@Design Mobile용 Top Menu 디자인 완성

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+@media screen and (min-width: 1452px) {
+    html {
+        width: 1452px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    html {
+        width: 768px;
+    }
+}
+
+@media screen and (min-width: 568px) {
+    html {
+        width: 568px;
+    }
+}
+
+@media screen and (min-width: 320px) {
+    html {
+        width: 320px;
+    }
+}
+
+html {
+    width: 100%;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
